--- a/Info.plist
+++ b/Info.plist
@@ -58,7 +58,7 @@
 		</dict>
 	</dict>
 	<key>Description</key>
-	<string>Add new sources to Delicious.</string>
+	<string>Add and update new links to Delicious.</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
